# nipponium

./: Cargo.toml  LICENSE  README.md
src/: lib.rs
src/kana/: mod.rs
src/romaji/: mod.rs
tests/: main.rs
